--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,10 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+tensorflow = "*"
+matplotlib = "*"
+numpy = "*"
+typed-argument-parser = "*"
 
 [requires]
 python_version = "3.8"
